--- a/html/Cat_ShoppingStore.html
+++ b/html/Cat_ShoppingStore.html
@@ -30,7 +30,7 @@
 
 <body>
 
-	<!-- <header>
+	<header>
 		<div class="logo">
 			<a href="../index.html">
 				<h1>
@@ -69,468 +69,482 @@
 				<span id="like">6</span>
 			</a>
 		</div>
-	</header> -->
+	</header>
 
-
-	<!-- <div class="wrap"> -->
-		<div class="title">
-			尋喵啟事 ｜ SHOPPING STORE
-		</div>
-
-		<div class="menu">
-
-			<a href="#" class="menuTitle">全部喵喵商品</a>
-
-			<a href="Cat_ShoppingStore_food.html" class="menuTitle">喵喵肚子餓</a>
-			<!-- <li><a href="#">喵飼料</a></li>
-						<li><a href="#">喵零食</a></li>
-						<li><a href="#">喵罐頭</a></li> -->
-
-			<a href="#" class="menuTitle">喵喵待在家</a>
-			<!-- 	<li><a href="#">喵毛處理</a></li>
-						<li><a href="#">精選喵砂</a></li>
-						<li><a href="#">喵喵想睡覺</a></li>-->
-
-			<a href="#" class="menuTitle">精選喵草</a>
-
-			<a href="#" class="menuTitle">喵喵愛玩耍</a>
-
-		</div>
-
-		<div class="banner  wow zoomIn">
-			<img src="../img/shoppingBanner.jpg">
-		</div>
-
-
-		<!-- <div class="hr"></div>
-				<div class="allTitle">喵喵肚子餓</div>
-				<div class="hr hr2"></div> -->
-
-		<form>
-
-			<select name="YourLocation" class="select">
-				<option value="Taipei">價格由高到低</option>
-				<option value="Taoyuan">價格由低到高</option>
-			</select>
-		</form>
-
-		<div class="search">
-			<input type="text" placeholder="尋 找 喵 喵 商 品">
-			<i class="fa fa-search" aria-hidden="true"></i>
-		</div>
-
-		<br>
-		<br>
-
-
-
-		<div class="allProduct">
-			<div class="type1">
-				<div class="typeName wow zoomIn">喵喵肚子餓</div>
-				<div class="typeBanner typeBanner1 wow zoomIn">
-					<a href="#">前往
-						<b>喵喵肚子餓</b> ｜ 30 項商品</a>
+	<div class="wrap">
+		<div class="wrapCenter">
+			<div class="title">
+				尋喵啟事 <span>SHOPPING STORE</span>
+			</div>
+	
+			<div class="menu">
+	
+				<a href="Cat_ShoppingStore.html" class="menuTitle menuNow ">全部喵喵商品</a>
+	
+				<a href="Cat_ShoppingStore_food.html" class="menuTitle">喵喵肚子餓</a>
+				<!-- <li><a href="#">喵飼料</a></li>
+							<li><a href="#">喵零食</a></li>
+							<li><a href="#">喵罐頭</a></li> -->
+	
+				<a href="#" class="menuTitle">喵喵待在家</a>
+				<!-- 	<li><a href="#">喵毛處理</a></li>
+							<li><a href="#">精選喵砂</a></li>
+							<li><a href="#">喵喵想睡覺</a></li>-->
+	
+				<a href="#" class="menuTitle">精選喵草</a>
+	
+				<a href="#" class="menuTitle">喵喵愛玩耍</a>
+	
+			</div>
+	
+			<div class="banner  wow zoomIn">
+				<img src="../img/shoppingBanner.jpg">
+			</div>
+	
+	
+			<!-- <div class="hr"></div>
+					<div class="allTitle">喵喵肚子餓</div>
+					<div class="hr hr2"></div> -->
+	
+			<form>
+	
+				<select name="YourLocation" class="select">
+					<option value="Taipei">價格由高到低</option>
+					<option value="Taoyuan">價格由低到高</option>
+				</select>
+			</form>
+	
+			<div class="search">
+				<input type="text" placeholder="尋 找 喵 喵 商 品">
+				<i class="fa fa-search" aria-hidden="true"></i>
+			</div>
+	
+			<br>
+			<br>
+	
+	
+	
+			<div class="allProduct">
+				<div class="type1">
+					<div class="typeName wow zoomIn">喵喵肚子餓</div>
+					<div class="typeBanner typeBanner1 wow zoomIn">
+						<a href="Cat_ShoppingStore_food.html">前往
+							<b>喵喵肚子餓</b> ｜ 30 項商品</a>
+					</div>
+				</div>
+				<div class="type2">
+	
+					<div class="product">
+						<a href="Cat_ShoppingStore_product.html">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food1.png">
+							</div>
+						</a>
+	
+						<div class="text">
+							Friskies
+							<br>雞肉罐頭
+						</div>
+	
+						<div class="cost">
+							$1000
+						</div>
+					</div>
+	
+					<div class="product">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food2.jpg">
+							</div>
+						</a>
+	
+						<div class="text">
+							Whiskas
+							<br>美味飼料
+						</div>
+	
+						<div class="cost">
+							$900
+						</div>
+					</div>
+	
+					<div class="product rwd">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food3.JPG">
+							</div>
+						</a>
+	
+						<div class="text">
+							Whiskas
+							<br>雞肉口味飼料
+						</div>
+	
+						<div class="cost">
+							$120
+						</div>
+					</div>
+	
+					<div class="product rwd">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food4.jpeg">
+							</div>
+						</a>
+	
+						<div class="text">
+							FancyFeast
+							<br>鮪魚大餐
+						</div>
+	
+						<div class="cost">
+							$1000
+						</div>
+					</div>
+	
+					<div class="product rwd">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food1.png">
+							</div>
+						</a>
+	
+						<div class="text">
+							Whiskas
+							<br>咖哩罐頭
+						</div>
+	
+						<div class="cost">
+							$1000
+						</div>
+					</div>
+					
+					<div class="typeBannerRWD  wow zoomIn">
+						<a href="Cat_ShoppingStore_food.html">前往
+							<b>喵喵肚子餓</b> ｜ 30 項商品</a>
+					</div>
+	
+	
+	
 				</div>
 			</div>
-			<div class="type2">
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food1.png">
-						</div>
-					</a>
-
-					<div class="text">
-						Friskies
-						<br>雞肉罐頭
-					</div>
-
-					<div class="cost">
-						$1000
+	
+	
+			<div class="allProduct">
+				<div class="type1">
+					<div class="typeName wow zoomIn">喵喵待在家</div>
+					<div class="typeBanner typeBanner2 wow zoomIn">
+						<a href="#">前往
+							<b>喵喵待在家</b> ｜ 46 項商品</a>
 					</div>
 				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food2.jpg">
+				<div class="type2">
+	
+					<div class="product">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food1.png">
+							</div>
+						</a>
+	
+						<div class="text">
+							Friskies
+							<br>雞肉罐頭
 						</div>
-					</a>
-
-					<div class="text">
-						Whiskas
-						<br>美味飼料
+	
+						<div class="cost">
+							$1000
+						</div>
 					</div>
-
-					<div class="cost">
-						$900
+	
+					<div class="product">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food2.jpg">
+							</div>
+						</a>
+	
+						<div class="text">
+							Whiskas
+							<br>美味飼料
+						</div>
+	
+						<div class="cost">
+							$900
+						</div>
+					</div>
+	
+					<div class="product rwd">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food3.JPG">
+							</div>
+						</a>
+	
+						<div class="text">
+							Whiskas
+							<br>雞肉口味飼料
+						</div>
+	
+						<div class="cost">
+							$120
+						</div>
+					</div>
+	
+					<div class="product rwd">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food4.jpeg">
+							</div>
+						</a>
+	
+						<div class="text">
+							FancyFeast
+							<br>鮪魚大餐
+						</div>
+	
+						<div class="cost">
+							$1000
+						</div>
+					</div>
+	
+					<div class="product rwd">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food1.png">
+							</div>
+						</a>
+	
+						<div class="text">
+							Whiskas
+							<br>咖哩罐頭
+						</div>
+	
+						<div class="cost">
+							$1000
+						</div>
+					</div>
+	
+					<div class="typeBannerRWD wow zoomIn">
+						<a href="#">前往
+							<b>喵喵待在家</b> ｜ 46 項商品</a>
+					</div>
+	
+	
+				</div>
+			</div>
+	
+	
+			<div class="allProduct">
+				<div class="type1">
+					<div class="typeName wow zoomIn">精選喵草</div>
+					<div class="typeBanner typeBanner3 wow zoomIn">
+						<a href="#">前往
+							<b>精選喵草</b> ｜ 46 項商品</a>
 					</div>
 				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food3.JPG">
+				<div class="type2">
+	
+					<div class="product">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food1.png">
+							</div>
+						</a>
+	
+						<div class="text">
+							Friskies
+							<br>雞肉罐頭
 						</div>
-					</a>
-
-					<div class="text">
-						Whiskas
-						<br>雞肉口味飼料
+	
+						<div class="cost">
+							$1000
+						</div>
 					</div>
-
-					<div class="cost">
-						$120
+	
+					<div class="product">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food2.jpg">
+							</div>
+						</a>
+	
+						<div class="text">
+							Whiskas
+							<br>美味飼料
+						</div>
+	
+						<div class="cost">
+							$900
+						</div>
+					</div>
+	
+					<div class="product rwd">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food3.JPG">
+							</div>
+						</a>
+	
+						<div class="text">
+							Whiskas
+							<br>雞肉口味飼料
+						</div>
+	
+						<div class="cost">
+							$120
+						</div>
+					</div>
+	
+					<div class="product rwd">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food4.jpeg">
+							</div>
+						</a>
+	
+						<div class="text">
+							FancyFeast
+							<br>鮪魚大餐
+						</div>
+	
+						<div class="cost">
+							$1000
+						</div>
+					</div>
+	
+					<div class="product rwd">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food1.png">
+							</div>
+						</a>
+	
+						<div class="text">
+							Whiskas
+							<br>咖哩罐頭
+						</div>
+	
+						<div class="cost">
+							$1000
+						</div>
+					</div>
+	
+					<div class="typeBannerRWD wow zoomIn">
+						<a href="#">前往
+							<b>精選喵草</b> ｜ 46 項商品</a>
+					</div>
+	
+	
+				</div>
+			</div>
+	
+	
+			<div class="allProduct">
+				<div class="type1">
+					<div class="typeName wow zoomIn">喵喵愛玩耍</div>
+					<div class="typeBanner typeBanner4 wow zoomIn">
+						<a href="#">前往
+							<b>喵喵愛玩耍</b> ｜ 46 項商品</a>
 					</div>
 				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food4.jpeg">
+				<div class="type2">
+	
+					<div class="product">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food1.png">
+							</div>
+						</a>
+	
+						<div class="text">
+							Friskies
+							<br>雞肉罐頭
 						</div>
-					</a>
-
-					<div class="text">
-						FancyFeast
-						<br>鮪魚大餐
-					</div>
-
-					<div class="cost">
-						$1000
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food1.png">
+	
+						<div class="cost">
+							$1000
 						</div>
-					</a>
-
-					<div class="text">
-						Whiskas
-						<br>咖哩罐頭
 					</div>
-
-					<div class="cost">
-						$1000
+	
+					<div class="product">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food2.jpg">
+							</div>
+						</a>
+	
+						<div class="text">
+							Whiskas
+							<br>美味飼料
+						</div>
+	
+						<div class="cost">
+							$900
+						</div>
 					</div>
+	
+					<div class="product rwd">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food3.JPG">
+							</div>
+						</a>
+	
+						<div class="text">
+							Whiskas
+							<br>雞肉口味飼料
+						</div>
+	
+						<div class="cost">
+							$120
+						</div>
+					</div>
+	
+					<div class="product rwd">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food4.jpeg">
+							</div>
+						</a>
+	
+						<div class="text">
+							FancyFeast
+							<br>鮪魚大餐
+						</div>
+	
+						<div class="cost">
+							$1000
+						</div>
+					</div>
+	
+					<div class="product rwd">
+						<a href="#">
+							<div class="pic  wow zoomIn">
+								<img src="../img/food1.png">
+							</div>
+						</a>
+	
+						<div class="text">
+							Whiskas
+							<br>咖哩罐頭
+						</div>
+	
+						<div class="cost">
+							$1000
+						</div>
+					</div>
+	
+					<div class="typeBannerRWD wow zoomIn">
+						<a href="#">前往
+							<b>喵喵愛玩耍</b> ｜ 46 項商品</a>
+					</div>
+	
+	
 				</div>
-
-
-
-
 			</div>
 		</div>
-
-
-		<div class="allProduct">
-			<div class="type1">
-				<div class="typeName wow zoomIn">喵喵待在家</div>
-				<div class="typeBanner typeBanner2 wow zoomIn">
-					<a href="#">前往
-						<b>喵喵待在家</b> ｜ 46 項商品</a>
-				</div>
-			</div>
-			<div class="type2">
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food1.png">
-						</div>
-					</a>
-
-					<div class="text">
-						Friskies
-						<br>雞肉罐頭
-					</div>
-
-					<div class="cost">
-						$1000
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food2.jpg">
-						</div>
-					</a>
-
-					<div class="text">
-						Whiskas
-						<br>美味飼料
-					</div>
-
-					<div class="cost">
-						$900
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food3.JPG">
-						</div>
-					</a>
-
-					<div class="text">
-						Whiskas
-						<br>雞肉口味飼料
-					</div>
-
-					<div class="cost">
-						$120
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food4.jpeg">
-						</div>
-					</a>
-
-					<div class="text">
-						FancyFeast
-						<br>鮪魚大餐
-					</div>
-
-					<div class="cost">
-						$1000
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food1.png">
-						</div>
-					</a>
-
-					<div class="text">
-						Whiskas
-						<br>咖哩罐頭
-					</div>
-
-					<div class="cost">
-						$1000
-					</div>
-				</div>
-
-
-
-
-			</div>
-		</div>
-
-
-		<div class="allProduct">
-			<div class="type1">
-				<div class="typeName wow zoomIn">精選喵草</div>
-				<div class="typeBanner typeBanner3 wow zoomIn">
-					<a href="#">前往
-						<b>精選喵草</b> ｜ 46 項商品</a>
-				</div>
-			</div>
-			<div class="type2">
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food1.png">
-						</div>
-					</a>
-
-					<div class="text">
-						Friskies
-						<br>雞肉罐頭
-					</div>
-
-					<div class="cost">
-						$1000
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food2.jpg">
-						</div>
-					</a>
-
-					<div class="text">
-						Whiskas
-						<br>美味飼料
-					</div>
-
-					<div class="cost">
-						$900
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food3.JPG">
-						</div>
-					</a>
-
-					<div class="text">
-						Whiskas
-						<br>雞肉口味飼料
-					</div>
-
-					<div class="cost">
-						$120
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food4.jpeg">
-						</div>
-					</a>
-
-					<div class="text">
-						FancyFeast
-						<br>鮪魚大餐
-					</div>
-
-					<div class="cost">
-						$1000
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food1.png">
-						</div>
-					</a>
-
-					<div class="text">
-						Whiskas
-						<br>咖哩罐頭
-					</div>
-
-					<div class="cost">
-						$1000
-					</div>
-				</div>
-
-
-
-
-			</div>
-		</div>
-
-
-		<div class="allProduct">
-			<div class="type1">
-				<div class="typeName wow zoomIn">喵喵愛玩耍</div>
-				<div class="typeBanner typeBanner4 wow zoomIn">
-					<a href="#">前往
-						<b>喵喵愛玩耍</b> ｜ 46 項商品</a>
-				</div>
-			</div>
-			<div class="type2">
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food1.png">
-						</div>
-					</a>
-
-					<div class="text">
-						Friskies
-						<br>雞肉罐頭
-					</div>
-
-					<div class="cost">
-						$1000
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food2.jpg">
-						</div>
-					</a>
-
-					<div class="text">
-						Whiskas
-						<br>美味飼料
-					</div>
-
-					<div class="cost">
-						$900
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food3.JPG">
-						</div>
-					</a>
-
-					<div class="text">
-						Whiskas
-						<br>雞肉口味飼料
-					</div>
-
-					<div class="cost">
-						$120
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food4.jpeg">
-						</div>
-					</a>
-
-					<div class="text">
-						FancyFeast
-						<br>鮪魚大餐
-					</div>
-
-					<div class="cost">
-						$1000
-					</div>
-				</div>
-
-				<div class="product">
-					<a href="#">
-						<div class="pic  wow zoomIn">
-							<img src="../img/food1.png">
-						</div>
-					</a>
-
-					<div class="text">
-						Whiskas
-						<br>咖哩罐頭
-					</div>
-
-					<div class="cost">
-						$1000
-					</div>
-				</div>
-
-
-
-
-			</div>
-		</div>
-	<!-- </div> -->
+	</div>
 
 
 </body>
