吃吃教我幹大事

--- a/html/catSearch.html
+++ b/html/catSearch.html
@@ -54,14 +54,12 @@
 	</header>
 	<div class="right">
 		<div class="container container1">
-			<h1>尋喵
-				<br>
-				<small class="selectTitle">搜尋你的喵喵</small>
+			<h1>尋喵<br><small class="selectTitle">搜尋你的喵喵</small>
 			</h1>
 			<form method="POST" action="#" class='selectForm'>
 				<div>
 					<div class="formInsert">
-						<input type="text" class="searchBar condition1" placeholder="你知道心儀喵喵的名字嗎?">
+						<input type="text" class="searchBar condition1" placeholder="你知道心儀喵喵的名字嗎？">
 						<button type="submit" class="searchBtn defaultBtn">
 							<i class="fa fa-search " aria-hidden="true"></i>
 						</button>
@@ -91,24 +89,28 @@
 							<button type="button" class="condition condition1" data-name='location' data-val='0'>臺北市</button>
 							<button type="button" class="condition" data-name='location' data-val='1'>新北市</button>
 							<button type="button" class="condition" data-name='location' data-val='2'>基隆市</button>
+							<br class="forRWD">
 							<button type="button" class="condition" data-name='location' data-val='3'>桃園市</button>
 							<button type="button" class="condition" data-name='location' data-val='4'>新竹市</button>
 							<br>
 							<button type="button" class="condition condition1" data-name='location' data-val='5'>新竹縣</button>
 							<button type="button" class="condition" data-name='location' data-val='6'>宜蘭縣</button>
 							<button type="button" class="condition" data-name='location' data-val='7'>苗栗縣</button>
+							<br class="forRWD">
 							<button type="button" class="condition" data-name='location' data-val='8'>台中市</button>
 							<button type="button" class="condition" data-name='location' data-val='9'>彰化縣</button>
 							<br>
 							<button type="button" class="condition condition1" data-name='location' data-val='10'>南投縣</button>
 							<button type="button" class="condition" data-name='location' data-val='11'>雲林縣</button>
 							<button type="button" class="condition" data-name='location' data-val='12'>嘉義縣</button>
+							<br class="forRWD">
 							<button type="button" class="condition" data-name='location' data-val='13'>嘉義市</button>
 							<button type="button" class="condition" data-name='location' data-val='14'>台南市</button>
 							<br>
 							<button type="button" class="condition condition1" data-name='location' data-val='15'>高雄市</button>
 							<button type="button" class="condition" data-name='location' data-val='16'>屏東縣</button>
 							<button type="button" class="condition" data-name='location' data-val='17'>花蓮縣</button>
+							<br class="forRWD">
 							<button type="button" class="condition" data-name='location' data-val='18'>台東縣</button>
 							<button type="button" class="condition" data-name='location' data-val='19'>離島</button>
 						</div>
@@ -127,6 +129,7 @@
 						<div class="formInsert">
 							<button type="button" class="condition condition1" data-name='age' data-val='0'>四個月以下</button>
 							<button type="button" class="condition" data-name='age' data-val='1'>四個月到一歲</button>
+							<br class="forRWD">
 							<button type="button" class="condition" data-name='age' data-val='2'>一歲到三歲</button>
 							<button type="button" class="condition" data-name='age' data-val='3'>三歲以上</button>
 						</div>
