--- a/html/Cat_ShoppingStore_food.html
+++ b/html/Cat_ShoppingStore_food.html
@@ -41,20 +41,20 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="#">尋喵</a>
-				</li>
-				<li>
-					<a href="##1">中途之家</a>
-				</li>
-				<li>
-					<a href="#">商城</a>
-				</li>
-				<li>
-					<a href="#">討論區</a>
-				</li>
-				<li>
-					<a href="#">會員專區</a>
-				</li>
+                    <a href="catSearch.html">尋喵</a>
+                </li>
+                <li>
+                    <a href="halfway_house_search.html">中途之家</a>
+                </li>
+                <li>
+                    <a href="Cat_ShoppingStore.html">商城</a>
+                </li>
+                <li>
+                    <a href="#">討論區</a>
+                </li>
+                <li>
+                    <a href="member.html">會員專區</a>
+                </li>
 			</ul>
 		</nav>
 		<div class="icons">
