--- a/html/Cat_ShoppingStore_product.html
+++ b/html/Cat_ShoppingStore_product.html
@@ -80,19 +80,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">尋喵</a>
+                    <a href="catSearch.html">尋喵</a>
                 </li>
                 <li>
-                    <a href="##1">中途之家</a>
+                    <a href="halfway_house_search.html">中途之家</a>
                 </li>
                 <li>
-                    <a href="#">商城</a>
+                    <a href="Cat_ShoppingStore.html">商城</a>
                 </li>
                 <li>
                     <a href="#">討論區</a>
                 </li>
                 <li>
-                    <a href="#">會員專區</a>
+                    <a href="member.html">會員專區</a>
                 </li>
             </ul>
         </nav>
