--- a/html/index.html
+++ b/html/index.html
@@ -65,14 +65,16 @@
             <div class="banner">
                 <div class="container">
                     <div class="find">
-                        <img src="../images/number0.png" alt="0">
+                        <!-- <img src="../images/number0.png" alt="0">
                         <img src="../images/number8.png" alt="8">
-                        <img src="../images/number7.png" alt="7"> 隻喵喵已經找到牠的主人
+                        <img src="../images/number7.png" alt="7">  -->
+                        隻喵喵已經找到牠的主人
                     </div>
                     <div class="wait">
+                        <!-- <img src="../images/number7.png" alt="7">
                         <img src="../images/number7.png" alt="7">
-                        <img src="../images/number7.png" alt="7">
-                        <img src="../images/number7.png" alt="7"> 隻喵喵還在等待牠的主人
+                        <img src="../images/number7.png" alt="7">  -->
+                        隻喵喵還在等待牠的主人
                     </div>
                     <hr>
                     <h2>尋找您未來的喵喵</h2>
