--- a/html/index.html
+++ b/html/index.html
@@ -8,10 +8,12 @@
     <title>尋喵啟事</title>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../plugin/jquery.fullPage.css">
+    <link rel="stylesheet" href="../css/number.css">
     <script src="https://use.fontawesome.com/533f4a82f0.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
     <script src="../plugin/jquery.fullPage.js"></script>
+    <script src="../js/numberCard.js"></script>
 </head>
 
 <body>
@@ -64,13 +66,13 @@
             <!-- banner -->
             <div class="banner">
                 <div class="container">
-                    <div class="find">
+                    <div class="find" id="find">
                         <!-- <img src="../images/number0.png" alt="0">
                         <img src="../images/number8.png" alt="8">
                         <img src="../images/number7.png" alt="7">  -->
                         隻喵喵已經找到牠的主人
                     </div>
-                    <div class="wait">
+                    <div class="wait" id="wait">
                         <!-- <img src="../images/number7.png" alt="7">
                         <img src="../images/number7.png" alt="7">
                         <img src="../images/number7.png" alt="7">  -->
