--- a/html/signUp.html
+++ b/html/signUp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>會員專區</title>
-    <link rel="stylesheet" href="../css/member.css">
+    <link rel="stylesheet" href="../css/signUp.css">
     <script src="https://use.fontawesome.com/533f4a82f0.js"></script>
 </head>
 
