--- a/test.html
+++ b/test.html
@@ -18,20 +18,20 @@
 </head>
 
 <body>
-    <div id="chaoverscroll_box" class="chaoverscroll" style="width:100px;">
-        <div id="a1" class="chaoverscroll">
+    <div id="chaoverscroll_box" class="chaoverscroll">
+        <div class="chaoverscroll">
             <a href="exp01.php">exp01</a>
         </div>
-        <div id="a2" class="chaoverscroll">
+        <div class="chaoverscroll">
             <a href="exp02.php">exp02</a>
         </div>
-        <div id="a3" class="chaoverscroll">
+        <div class="chaoverscroll">
             <a href="exp03.php">exp03</a>
         </div>
-        <div id="a4" class="chaoverscroll">
+        <div class="chaoverscroll">
             <a href="exp04.php">exp04</a>
         </div>
-        <div id="a5" class="chaoverscroll">
+        <div class="chaoverscroll">
             <a href="exp05.php">exp05</a>
         </div>
     </div>
