--- a/html/header.html
+++ b/html/header.html
@@ -42,7 +42,7 @@
                 <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
             </a>
             <a href="#">
-                <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
+                <i class="fa fa-user-circle-o fa-2x login" aria-hidden="true"></i>
             </a>
             <a href="#">
                 <i class="fa fa-heart-o fa-2x" aria-hidden="true"></i>
