--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,8 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
     <script src="../plugin/jquery.fullPage.js"></script>
-    <script src="../js/numberCard.js"></script>
+    <script src="../js/loading&Card.js"></script>
+    <script src="../js/pointGame.js"></script>
 </head>
 
 <body>
@@ -41,10 +42,10 @@
                     <a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
                 </li>
                 <li>
-                    <a href="#">討論區</a>
+                    <a href="./forum.html">討論區</a>
                 </li>
                 <li>
-                    <a href="#">會員專區</a>
+                    <a href="./member.html">會員專區</a>
                 </li>
             </ul>
         </nav>
@@ -97,6 +98,28 @@
                             <i class="fa fa-search fa-lg" title="跳轉至搜尋結果" aria-hidden="true"></i>
                         </a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            <!-- 分數遊戲 -->
+            <div class="game-point">
+                <div class="game-point-title">
+                    <h2>lalala</h2>
+                    <h3>QQQ!</h3>
+                </div>
+                <div class="game-point-top">
+                    <div class="askBox">
+                        <img class="askBorder" src="../images/cat_askBorder.png" alt="askBorder">
+                        <span id="questions">好好好 你咕咕咕咕咕咕咕咕雞雞叫</span>
+                    </div>
+                    <img class="cat-ask" src="../images/cat_ask.png" alt="cat ask">
+                </div>
+                <div class="game-point-bottom">
+                    <img class="people" src="../images/cat_ask_people.png" alt="cat ask people">
+                    <button class="option-btn" id="option-btn-a"></button>
+                    <button class="option-btn" id="option-btn-b"></button>
+                    <img class="hug" src="../images/cat_cat.png" alt="hug cat">
                 </div>
             </div>
         </div>
@@ -227,6 +250,7 @@
                         <span class="half-address">台北市信義區信義路四段88號</span>
                         <span class="half-tel">02-2777-6666</span>
                         <span class="half-time">營業時間 : 10:00~20:00</span>
+                        <a href="#" class="read-more">Read more..</a>
                     </div>
                 </div>
                 <div class="half-item">
@@ -240,6 +264,7 @@
                         <span class="half-address">台北市信義區信義路四段88號</span>
                         <span class="half-tel">02-2777-6666</span>
                         <span class="half-time">營業時間 : 10:00~20:00</span>
+                        <a href="#" class="read-more">Read more..</a>
                     </div>
                 </div>
                 <div class="half-item">
@@ -253,6 +278,7 @@
                         <span class="half-address">台北市信義區信義路四段88號</span>
                         <span class="half-tel">02-2777-6666</span>
                         <span class="half-time">營業時間 : 10:00~20:00</span>
+                        <a href="#" class="read-more">Read more..</a>
                     </div>
                 </div>
                 <div class="more">
